[package]
name = "client"
version = "0.1.0"
rust-version = "1.75.0"
edition = "2021"

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor", rev = "955e7ea" }
anchor-client = { git = "https://github.com/coral-xyz/anchor", rev = "955e7ea" }
anchor-spl = { git = "https://github.com/coral-xyz/anchor", rev = "955e7ea" }
raydium-cp-swap = {path = "../programs/cp-swap", features = ["no-entrypoint", "client"]}
solana-sdk = "2"
solana-client = "2"
solana-account-decoder = "2"
solana-transaction-status = "2"
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
spl-token-client = "0.13.0"
spl-memo = "6.0.0"
spl-associated-token-account = { version = "6.0.0", features = ["no-entrypoint"]}
spl-token-2022 = { version = "6.0.0", features = ["no-entrypoint"]}
clap = { version = "4.1.8", features = ["derive"] }
anyhow = "1.0.94"
rand = "0.7.3"
hex = "0.4.3"
configparser = "3.0.0"
serde_json = { version = "1.0.78" }
serde = { version = "1.0", features = ["derive"] }
arrayref = "0.3.9"
bs58 = { version = "0.5.1"}
bincode = { version = "1.3.3" }
regex = "1"
colorful = "0.3.2"